--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
 <head>
  <title>my project</title>
+  <link rel="stylesheet" href="./assets/css/all.css">
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <script src="https://kit.fontawesome.com/2d9d01a629.js" crossorigin="anonymous"></script>
-  <link rel="icon" type="image" href="https://code.s3.yandex.net/web-code/js-favicon.ico">
   </head>
   <body>
     <div class="container-1">
@@ -13,44 +12,21 @@
        для себя:На транспортной бирже выстовляют более 750 000 предложений грузов и транспортных сред
           <dvi class="container-2">
            <div class="box-1">
-             <h1>БАЗОВЫЙ</h1>
-            <a href="" class="fas fa-check"></a>  Добавление груза/транспорта </br><hr>
-            <a href="" class="fas fa-check"></a>  Поиск груза/транспорта</br><small>лимит 5 выдач в сутки</small></br><hr>
-            <a href="" class="fas fa-check"></a>  Доступ к каталогу компаний</br><hr>
-            <a href="" class="fas fa-check"></a>  Один сотрудник в компании
-            <h3>НАЧАТЬ</h3>
+           <h1>БАЗОВЫЙ</h1>
+          <p><i class="fas fa-check"></i>  Добовления груза/транспорта</p><hr width="290px" >
+           <p >Поиск груза/транспорта </p>
+         <small>лимит 5 выдач</small><hr width="290px">
+           <p>Доступ к котологу компании</p><hr width="290px">
+           <p>Один сторудник в компании</p><hr width="290px">
+           <h2>начать</h2>
         </div>
+          <div class="container-3">
             <div class="box-2">
-            <h2>ПРЕМИУМ</h2>
-           <div class="container-3">
-              <div class="box-3">
-              <a href="" class="fas fa-check"></a>  Добавление груза/транспорта </br>
-              <hr>
-              <a href="" class="fas fa-check"></a>  Поиск груза/транспорта</br><small>Безлимит</small></br>
-              <hr>
-              <a href="" class="fas fa-check"></a>  Доступ к каталогу компаний</br>
-              <hr>
-              <a href="" class="fas fa-check"></a>  Неограниченное число </br>сотрудников в компании</br><hr>
-              <a href="" class="fas fa-check"></a>  Проверка контрагентов</br><hr>
-              <a href="" class="fas fa-check"></a>  Персональные менеджер</br><hr>
-              <a href="" class="fas fa-check"></a>  Юридическая поддержка
-              <h4>ОПЛАТИТЬ</h4>
+               <h3>ПРЕМИУМ</h3>
             </div>
-              <div class="box-4">
-                <b>Стоимость</b></br>
-                <a href="" class="fas fa-check-square"></a>  меся 1000</br>
-                <a href="" class="fas fa-square"></a>  Квартал 4000</br>
-                <a href="" class="fas fa-square"></a>  Год 1400
-                <h5>Пробовать бесплатно 4 месяца</h5>
-              </div>
-        </div>
-        </div>  
+            </div>
 </dvi>
-</br></br></br>
-По всем вопросам обращайтесь      <a href="" class="fas fa-phone-volume"></a><b>trns@log.by</b> </br>к менеджерам по работе с клиентами <a href="" class="fas fa-envelope"></a>  <b>+375(17)263 33 33</b>
-</br></br></br>Приведенные в таблицах цены указаны в российских рублях без НДС. Цены соответствуют Прейскуранту ООО «ТРАНС.РУ» №03/17.
-Валютный прейскурант для нерезидентов РФ
-предоставляется по запросу. Цены действительны до 31.03.2017г.
 </div>
+
 </body>
 </html>
