refactor:подключить шрифт

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
  <title>my project</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="stylesheet" href="./assets/css/all.css">
   <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
